# disagreement-aware-RAG

./: LICENSE  README.md
app/: .env  README.md  pyproject.toml
app/backend/: disagreement.py  features.py  main.py  rag.py
app/data/: disagree_head.joblib  test_preds.npz
app/data/index/: default__vector_store.json  docstore.json  index_store.json
app/data/logs/: current_run_metrics.txt
app/data/model_runs/: disagree_head_3.joblib  disagree_head_92.5resp.joblib
app/data/raw/: qa_boolq_070d23b16b1d.txt  qa_boolq_10412398f732.txt  qa_boolq_110fe963c33d.txt  qa_boolq_13ad22c5a122.txt  qa_boolq_2cbc7ada8438.txt  qa_boolq_30e0b8c4abae.txt  qa_boolq_39b6211e9c3e.txt  qa_boolq_3ee421c3f964.txt  qa_boolq_418b5d4e3b90.txt  qa_boolq_450b7b87dfa8.txt  qa_boolq_4635abb777b3.txt  qa_boolq_4c093752e0bd.txt  qa_boolq_50d7a09c3994.txt  qa_boolq_586738e78e9b.txt  qa_boolq_60091c1406c0.txt  qa_boolq_6045173465b2.txt  qa_boolq_60ed700e57ac.txt  qa_boolq_65a750d781fd.txt  qa_boolq_661a76a37851.txt  qa_boolq_697a80c813a1.txt  qa_boolq_6a45de128ede.txt  qa_boolq_6a4e715acaf0.txt  qa_boolq_6c264e0b0a79.txt  qa_boolq_6da8b8e3c1d0.txt  qa_boolq_700dd0852e16.txt  qa_boolq_7150f01b9f86.txt  qa_boolq_73fe11583e8b.txt  qa_boolq_782b9afb4bf6.txt  qa_boolq_80e8d81ad846.txt  qa_boolq_81b26bd072d5.txt  qa_boolq_8226e86d50fd.txt  qa_boolq_848c87408445.txt  qa_boolq_87df64524ec8.txt  qa_boolq_8be78676daf0.txt  qa_boolq_92a7a9a1bdcc.txt  qa_boolq_966ef2685c24.txt  qa_boolq_98838c91f367.txt  qa_boolq_9dd5fe4144b9.txt  qa_boolq_a2b2170203db.txt  qa_boolq_a4abb4b275f6.txt  (+92 more)
app/data/test/: qa_boolq_1026d0a468f9.txt  qa_boolq_283bd5060aa9.txt  qa_boolq_2df26a0e3e6b.txt  qa_boolq_4066c5102b26.txt  qa_boolq_57a99a58012e.txt  qa_boolq_6283a3673836.txt  qa_boolq_66c3566d0210.txt  qa_boolq_6be0385ce159.txt  qa_boolq_792fa1f85a66.txt  qa_boolq_962f9948ef67.txt  qa_boolq_a9f2d4086f54.txt  qa_boolq_ab16752972be.txt  qa_boolq_bdb76841f70d.txt  qa_boolq_dcb20558e577.txt  qa_boolq_dd4cf0934a2f.txt  qa_boolq_ef9501938534.txt  qa_boolq_fce4b7f7da6c.txt  qa_squadv2_0e501f3ef14d.txt  qa_squadv2_233af44bbacd.txt  qa_squadv2_4e4038bcc8e9.txt  (+15 more)
app/frontend/: next.config.ts  package-lock.json  package.json
app/scripts/: data_ingest.py  data_split.py  evals.py  get_data.py  get_model.py  train_head.py
app/tests/: flow_test.py  gpu_run.py
(+198 files in other folders)
