[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "Chinmay Arvind",email = "chinmayarvind23@gmail.com"}
]
package-mode = false
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "pandas (==2.2.2)",
    "llama-index (>=0.13.0,<0.14.0)",
    "llama-index-llms-llama-cpp (>=0.5.0,<0.6.0)",
    "llama-index-embeddings-huggingface (>=0.6.0,<0.7.0)",
    "llama-index-vector-stores-faiss (>=0.5.0,<0.6.0)",
    "llama-index-retrievers-bm25 (>=0.6.1,<0.7.0)",
    "wandb (>=0.21.0,<0.22.0)",
    "rouge-score (==0.1.2)",
    "torch (>=2.7.1,<3.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "trafilatura (>=2.0.0,<3.0.0)",
    "datasets (>=4.0.0,<5.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "sentence-transformers (>=5.0.0,<6.0.0)",
    "faiss-cpu (>=1.11.0.post1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "llama_cpp_cu124"
url = "https://abetlen.github.io/llama-cpp-python/whl/cu124"
priority = "explicit"

[[tool.poetry.source]]
name = "llama_cpp_cu122"
url = "https://abetlen.github.io/llama-cpp-python/whl/cu122"
priority = "explicit"

[[tool.poetry.source]]
name = "llama_cpp_cu121"
url = "https://abetlen.github.io/llama-cpp-python/whl/cu121"
priority = "explicit"